--- a/Javaproject/JDBCProject/.classpath
+++ b/Javaproject/JDBCProject/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/cheoho-hi/Documents/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/cheoho-hi/Documents/lib/mysql-connector-java-8.0.30.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
