--- a/JSP/intellij/FirstApp/FirstApp/build.gradle
+++ b/JSP/intellij/FirstApp/FirstApp/build.gradle
@@ -22,10 +22,20 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    // https://mvnrepository.com/artifact/javax.servlet/jstl
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+
+
+// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
+
+
 }
 
 test {
