--- a/spring/Intellj/SpringMVC/build.gradle
+++ b/spring/Intellj/SpringMVC/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
+// https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
 
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.16.0'
