--- a/spring/Intellj/Spring_Todo/build.gradle
+++ b/spring/Intellj/Spring_Todo/build.gradle
@@ -38,6 +38,14 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
 
+    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+
+
+
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
