--- a/spring/Intellj/TodoSpring/build.gradle
+++ b/spring/Intellj/TodoSpring/build.gradle
@@ -46,6 +46,13 @@ dependencies {
     implementation group: 'jstl', name: 'jstl', version: '1.2'
 
 
+    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
 
