--- a/spring/Intellj/Todo_Spring2/build.gradle
+++ b/spring/Intellj/Todo_Spring2/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 
     implementation 'org.mybatis:mybatis:3.5.9'
     implementation 'org.mybatis:mybatis-spring:2.0.7'
+// https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
 
 
 }
