페이징처리

--- a/spring/boot/SpringBootBoard/src/main/resources/application.properties
+++ b/spring/boot/SpringBootBoard/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 # ?? ??
 # Datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,8 +19,8 @@ spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=1800000
 #LOG4j2
 logging.level.org.springframework=info
-logging.level.com.first.app=info
-logging.level.com.first.app.mapper=trace
+logging.level.com.app.board=info
+logging.level.com.app.board.mapper=trace
 # Mybatis : mapper-location
 mybatis.mapper-locations=mybatis/mapper/*.xml
 
