--- a/spring/boot/FirstBootApp/src/main/resources/application.properties
+++ b/spring/boot/FirstBootApp/src/main/resources/application.properties
@@ -16,6 +16,15 @@ spring.datasource.hikari.validation-timeout=2000
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=1800000
+# JPA Set
+# DDL ????
+spring.jpa.hibernate.ddl-auto=update
+# ?? ???? sql ??
+spring.jpa.properties.hibernate.format_sql=true
+# JAP ???? SQL ??
+spring.jpa.show-sql=true
+
+
 #LOG4j2
 logging.level.org.springframework=info
 logging.level.com.first.app=info
