--- a/spring/boot/SpringBootBoard/src/main/resources/application.properties
+++ b/spring/boot/SpringBootBoard/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # Datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/project
@@ -16,12 +15,14 @@ spring.datasource.hikari.validation-timeout=2000
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=1800000
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 #LOG4j2
 logging.level.org.springframework=info
 logging.level.com.app.board=info
 logging.level.com.app.board.mapper=trace
 # Mybatis : mapper-location
 mybatis.mapper-locations=mybatis/mapper/*.xml
-
 server.servlet.session.tracking-modes=cookie
 #server.servlet.session.tracking-modes=cookie
